// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty page 1`] = `
Array [
  <Breadcrumbs />,
  "Title",
  <article
    className="a"
  >
    <h1
      className="b"
    >
      <div>
        Empty Name
      </div>
    </h1>
    <div />
    <NoProductsFound />
  </article>,
]
`;

exports[`renders the correct tree 1`] = `
Array [
  <Breadcrumbs />,
  "Title",
  <article
    className="a"
  >
    <h1
      className="b"
    >
      <div>
        Name
      </div>
    </h1>
    <div />
    <section
      className="c"
    >
      <Gallery
        items={
          Object {
            "id": 1,
          }
        }
      />
    </section>
    <div
      className="d"
    >
      <Pagination
        pageControl={Object {}}
      />
    </div>
  </article>,
]
`;
